Fix cannot update lecture
